fine ajustment to front end

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -236,12 +236,7 @@ button {
     height: 80px;
 }
 
-.navbar-light .navbar-nav .active>.nav-link,
-.navbar-light .navbar-nav .nav-link.active,
-.navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .show>.nav-link {
-    color: #f76d37;
-}
+
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
@@ -849,26 +844,27 @@ a:hover {
     text-align: center;
 }
 
-.main_bt a {
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #d33a11;
-    padding: 15px 50px 12px 50px;
-    border-radius: 30px;
+.button{
+    color: #fff; 
+    background-color: #d33a11; 
+    font-size: 16px; 
+    text-align: center; 
+    padding: 15px 50px 12px 50px; 
+    border-radius: 30px; 
     display: block;
+    /* box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24); */
+
 }
 
-.main_bt a {
-    color: #ffffff;
-    background-color: #d33a11;
-}
-
-.main_bt a:hover {
+.btn111:hover {
     color: #323131;
     background-color: #ffffff;
+}
+
+.btn111:active{
+    color: #fff; 
+    background-color: #d33a11; 
+    transition: 0.5s;
 }
 
 .padding_0 {
