--- a/src/css/style.css
+++ b/src/css/style.css
@@ -838,6 +838,11 @@ a:hover {
     border-radius: 50px;
 }
 
+.error{
+    border: 5px;
+    color: red;
+}
+
 .send_btn {
     width: 170px;
     margin: 0 auto;
