--- a/src/css/style.css
+++ b/src/css/style.css
@@ -533,7 +533,7 @@ img.image {
 .places_section {
     width: 100%;
     float: left;
-    background-image: url(../images/places-bg.JPG);
+    background-image: url(../images/places-bg1.jpg);
     height: auto;
     padding-bottom: 100px;
     background-attachment: fixed;
