--- a/src/css/style.css
+++ b/src/css/style.css
@@ -866,8 +866,6 @@ a:hover {
     padding: 15px 50px 12px 50px; 
     border-radius: 30px; 
     display: block;
-    /* box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24); */
-
 }
 
 .btn111:hover {
@@ -1030,6 +1028,15 @@ a:hover {
     text-transform: uppercase;
     text-align: center;
 }
+.place_topics{
+    width: 100%;
+    float: left;
+    font-size: 20px;
+    color: #1a7399;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
 
 .place_text {
     width: 100%;
@@ -1041,12 +1048,21 @@ a:hover {
     text-align: justify;
 }
 
+.dot{
+    height: 7px;
+    width: 7px;
+    background-color: #000;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 15px;
+}
+
 .place_img{
     padding-left: 60px;
     margin-top: 80px;
 }
 
-/* about section end */
+/* place-page section end */
 
 .margin_top90 {
     margin-top: 90px;
